# hlkapp

./: .gitignore  CLAUDE.md  KlinikPortal.iss  KlinikPortal.spec  build_windows.ps1  bump.sh  check-stats.sh  main.py  openapi.yaml  pyproject.toml
.claude/: settings.local.json
.claude/skills/plan-review/: SKILL.md
.claude/skills/pyinstaller-windows/: SKILL.md
.claude/skills/python-standards/: SKILL.md
.claude/skills/vue-frontend-standards/: SKILL.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  init-container.sh  project-setup.sh
.github/workflows/: build-windows.yml
assets/: graph_template.html  hierarchy_template.html
backend/src/klinik/: app.py  config.py  database.py
docs/: DESIGN_IMPLEMENTERING.md  GECKO_BOOKING_STATISTIK.md  IMPLEMENTERINGSPLAN.md  KLINIK_PORTAL_STRUKTUR.md  KLINIK_PORTAL_VISION.md  WINDOWS_PAKKNING.md  statestikplan.md
docs/hlkapp_design/: KlinikPortal.html  components.jsx
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  schemas.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: crawler.ts  settings.ts  statistik.ts  sync.ts
frontend/src/views/: BehandlingerView.vue  BookingerView.vue  OversigtsView.vue  PrislisteView.vue  SeoView.vue  SettingsView.vue  StatisticsView.vue  StubView.vue
scrapy_crawler/: scrapy.cfg
scrapy_crawler/src/crawler/: db.py  (+2 more)
tests/: test_analysis.py  test_config.py  test_gecko_client.py  test_gecko_scraper.py  test_stats_service.py
(+33 files in other folders)
